--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
   <meta http-equiv="Pragma" content="no-cache" />
   <meta http-equiv="Expires" content="0" />
-  <title>9M2PJU NCS Dashboard</title>
+  <title>9M2PJU NCS Center</title>
 </head>
 
 <body class="bg-slate-950 text-slate-50 antialiased">
